Fixed bug #33841 (pdo sqlite driver forgets to update affected column count on execution of prepared statments).